# mtoc

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  FLATPAK_CHANGES.md  README.md  albumartplan.md  app.qrc  build-flatpak-clean.sh  build-flatpak.sh  horizontalbrowserplan.md  mtoc.desktop  mtoc.files  mtoc.pro  mtoc.spec  org._3fz.mtoc.appdata.xml  org._3fz.mtoc.desktop  org._3fz.mtoc.metainfo.xml  org._3fz.mtoc.yml  perf.data.old  run_mtoc.sh  run_mtoc_force_gl.sh  run_mtoc_nvidia.sh
.claude/: settings.local.json
.tito/: tito.props
docs/: scrobbling-feasibility-study.md  scrobbling-phase1-plan.md
resources/banner/: main-screenshot.avif  mtoc-banner.avif
src/: main.cpp
src/backend/: systeminfo.cpp  systeminfo.h
src/backend/database/: databasemanager.cpp  databasemanager.h
src/backend/playback/: audioengine.cpp  audioengine.h  mediaplayer.cpp  mediaplayer.h
src/backend/playlist/: FavoritesVirtualPlaylist.cpp  FavoritesVirtualPlaylist.h  VirtualPlaylist.cpp  VirtualPlaylist.h  VirtualPlaylistModel.cpp  VirtualPlaylistModel.h  VirtualTrackData.h  playlistmanager.cpp  playlistmanager.h
src/backend/scrobble/: scrobblemanager.cpp  scrobblemanager.h
src/backend/settings/: settingsmanager.cpp  settingsmanager.h
src/backend/system/: mprismanager.cpp  mprismanager.h
src/backend/utility/: metadataextractor.cpp  metadataextractor.h
src/qml/: Constants.qml  Main.qml  Styles.qml  Theme.qml
src/qml/Components/: AlbumArtPopup.qml  AlphabeticalScrollBar.qml  BlurredBackground.qml  BorderShader3D.qml  ChangelogPopup.qml  CompactNowPlayingBar.qml  GradientBorderItem.qml  HistoryHeader.qml  HistoryListView.qml  HistoryPopup.qml  HorizontalAlbumBrowser.qml  LyricsPopup.qml  LyricsView.qml  PlaybackControls.qml  QueueActionDialog.qml  QueueHeader.qml  QueueListView.qml  QueuePopup.qml  ResizeHandler.qml  SearchBar.qml  SmoothBorderItem.qml  StyledMenu.qml  StyledMenuItem.qml  StyledMenuSeparator.qml
src/qml/Views/: LibraryEditorWindow.qml  LibraryPane.qml  MiniPlayerWindow.qml  NowPlayingPane.qml  PlaylistView.qml  SettingsWindow.qml
src/qml/shaders/: border3d.frag  border3d.frag.qsb  border3d.vert  border3d.vert.qsb
